<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.main.UserManageFragment"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp">

    <ProgressBar
            android:id="@+id/editPBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:backgroundTint="@android:color/background_light"
            android:layout_above="@id/EditUserCard"
            android:indeterminateTint="#1a09d6"
            android:layout_marginTop="-7dp"/>

    <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/EditUserCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/cardStyle"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="3dp"
            card_view:contentPadding="4dp"
            >

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" >

            <TextView
                    android:text="@string/edit_user"
                    android:layout_marginVertical="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/tvEditFragmentName"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@android:drawable/ic_menu_edit"/>
            <TextView
                    android:text="@string/name"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvEditName"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tvEditFragmentName"
            />
            <EditText
                    android:id = "@+id/etEditName"
                    android:layout_marginTop="12dp"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignRight="@id/tvEditName"
                    android:layout_below="@id/tvEditFragmentName"
                    android:background="@android:color/background_light"
            />
            <TextView
                    android:text="@string/bday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tvEditName"
                    android:id="@+id/tvEditBDay"
            />

            <EditText android:layout_width="180dp" android:layout_height="wrap_content"
                      android:id="@+id/etEditBday"
                      android:layout_alignParentRight="true"
                      android:layout_alignRight="@id/tvEditBDay"
                      android:layout_below="@id/etEditName"
                      android:layout_marginVertical="12dp"
                      android:background="@android:color/background_light"
                      android:textColorHint="@android:color/darker_gray"
                      android:textSize="16dp"
                      android:hint="@string/date_hint"
            />
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:id="@+id/buttonLayer"
                          android:layout_centerHorizontal="true"
                          android:layout_marginVertical="12dp"
                          android:layout_below="@id/etEditBday">
                    <Button
                            android:text="@string/edit"
                            android:id="@+id/submitEditUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="5dp"
                            android:background="@drawable/custombutton1"
                            android:layout_marginHorizontal="4dp"
                            android:layout_marginBottom="4dp"/>

                    <Button
                            android:text="@string/delete"
                            android:id="@+id/deleteEditUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custombutton1"
                            android:elevation="5dp"
                            android:layout_marginHorizontal="4dp"
                            android:layout_marginBottom="4dp"/>
                    <Button
                            android:text="@string/update"
                            android:id="@+id/updateEditUser"
                            android:background="@drawable/custombutton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elevation="5dp"
                            android:layout_marginHorizontal="4dp"
                            android:layout_marginBottom="4dp"/>

            </LinearLayout>



            <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_close_btn"
                    style="?attr/editCloseButtonStyle"
                    app:fabIcon="@android:drawable/btn_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="5dp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>