<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.main.AddUserFragment"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        >

    <ProgressBar
            android:id="@+id/addPBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:backgroundTint="@android:color/background_light"
            android:layout_above="@id/addUserCard"
            android:elevation="10dp"
            android:layout_marginTop="-7dp"/>

    <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            style="?attr/addUserCardStyle"
            android:id="@+id/addUserCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="3dp"
            card_view:contentPadding="4dp">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" >

            <TextView
                    android:text="@string/add_user"
                    android:layout_marginVertical="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/secondary_text_dark"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:id="@+id/tvAddFragmentName"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@android:drawable/ic_menu_edit"/>
            <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAddName"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/tvAddFragmentName"
            />
            <EditText
                    android:id = "@+id/etAddName"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignRight="@id/tvAddName"
                    android:layout_below="@id/tvAddFragmentName"
                    android:background="@android:color/background_light"
            />
            <TextView
                    android:text="@string/bday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tvAddName"
                    android:id="@+id/tvAddBDay"
            />

            <EditText android:layout_width="180dp" android:layout_height="wrap_content"
                      android:id="@+id/etAddBday"
                      android:layout_alignParentRight="true"
                      android:layout_alignRight="@id/tvAddBDay"
                      android:layout_below="@id/etAddName"
                      android:layout_marginVertical="12dp"
                      android:background="@android:color/background_light"
                      android:textColorHint="@android:color/darker_gray"
                      android:textSize="16dp"
                      android:hint="@string/date_hint"
            />
            <TextView
                    android:text="@string/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/tvAddBDay"
                    android:id="@+id/tvAddId"
            />
            <EditText android:layout_width="180dp" android:layout_height="wrap_content"
                      android:id="@+id/etAddId"
                      android:layout_alignParentRight="true"
                      android:layout_alignRight="@id/tvAddId"
                      android:layout_below="@id/etAddBday"
                      android:background="@android:color/background_light"
                      android:inputType="number"
                      android:textColorHint="@android:color/darker_gray"
                      android:hint="0"
            />

            <Button
                    android:text="@string/confirm"
                    android:id="@+id/submitAddUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tvAddId"
                    android:background="@drawable/custombutton1"
                    android:elevation="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="4dp"/>


            <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
                    style="?attr/addCloseButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabIcon="@android:drawable/btn_dialog"
                    android:clickable="true" android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
                    android:layout_marginEnd="5dp" android:id="@+id/add_close_btn"
                    android:layout_marginTop="5dp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>